@startuml Coffee-eCommerce

    abstract class Produto {

        - id: Long
        - nome: String
        - descricao: String
        - preco: Double
        - estoque: Integer
    }

    class Cafe {

        - metodoPreparo: String
        - tipo: String
    }

    enum Intensidade {

        + SUAVE: int
        + MEDIA: int
        + INTENSA: int
    }

    class Marca {

        - id: Long
        - nome: String
        - cnpj: String
    }

    abstract class Pessoa {

        - id: Long
        - nome: String
    }

    class PessoaFisica {

        - cpf: String
        - email: String
    }

    enum Sexo {

        + MASCULINO: int
        + FEMININO: int
    }

    enum Perfil {

        + ADMIN: int
        + USER: int
    }

    class Usuario {

        - id: Long
        - nome: String
        - email: String
        - senha: String
        - cpf: String
    }

    class Telefone {

        - id: Long
        - codigoArea: String
        - numero: String
    }

    class Compra {

        - id: Long
        - dataCompra: LocalDate
        - totalCompra: Double
        - ifConcluida: Boolean
    }

    class ItemCompra {

        - id: Long
        - quantidade: Integer
        - precoUnitario: Double
    }

    class Endereco {

        - id: Long
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
    }

    class Avaliacao {

        - id: Long
        - comentario: String
        - data: Date
    }

    enum Estrela {

        + ESTRELA1: int
        + ESTRELA2: int
        + ESTRELA3: int
        + ESTRELA4: int
        + ESTRELA5: int
    }

    abstract class Pagamento {

        - id: Long
        - confirmacaoPagamento: Boolean
        - dataConfirmacaoPagamento: Date
        - valor: Double
    }

    class BoletoBancario {

        - nome: String
        - cpf: String
        - dataGeracaoBoleto: Date
        - dataVencimento: Date
    }

    class Pix {

        - nome: String
        - cpf: String
        - dataExpiracaoTokenPix: LocalDate
    }

    class CartaoCredito {

        - numeroCartao: String
        - nomeImpressoCartao: String
        - cpfTitular: String
    }

    enum BandeiraCartao {

        + VISA: int
        + AMERICAN_EXPRESS: int
        + HIPERCARD: int
        + DINERS: int
        + MASTERCARD: int
        + ELO: int
    }

    class Estado {

        - id: Long
        - nome: String
        - sigla: String
    }

    class Municipio {

        - id: Long
        - nome: String
    }

    Produto "*" o--> "1" Marca

    Cafe -up-|> Produto
    Cafe "*" o--> "1" Intensidade

    Municipio "*" *--> "1" Estado

    Endereco "*" --> "1" Municipio

    PessoaFisica "1" --> "*" Sexo

    PessoaFisica -up-|> Pessoa

    Usuario "1" --> "1" PessoaFisica
    Usuario "*" --> "*" Perfil
    Usuario "*" --> "*" Produto: listaDesejo
    Usuario "1" *--> "1" Telefone: telefonePrincipal
    Usuario "1" *--> "1" Telefone: telefoneOpcional
    Usuario "*" *--> "1" Endereco: endereçoPrincipal

    ItemCompra "*" --> "1" Produto

    BoletoBancario -up-|> Pagamento

    Pix -up-|> Pagamento

    CartaoCredito -up-|> Pagamento
    CartaoCredito "*" --> "1" BandeiraCartao

    Compra "*" --> "1" Usuario
    Compra "1" *--> "*" ItemCompra
    Compra "*" --> "1" Endereco
    Compra "1" *--> "1" Pagamento

    Avaliacao "*" --> "1" Estrela
    Avaliacao "*" o--> "1" Usuario
    Avaliacao "*" --> "1" Produto
@enduml